@@ -37,6 +37,8 @@ tooltip-edit-networks=Edit networks
 tooltip-selection-tool=Select roboports with the tool to add them to networks\nShift + select to remove them.
 tooltip-show-network=Show in map
 spider-save=Save the spidertrons logistic requests as a preset
+spider-trash-all=Trash unrequested items
+spider-trash-all-tt=Sets every unconfigured item to be trashed
 autotoggle_unrequested=Auto-off
 autotoggle_unrequested_tt=Turn off trashing of unrequested items once they are all removed
 
